# ankivoc

./: .gitignore  ANKI_FIELD_RENAME_GUIDE.md  ANKI_TROUBLESHOOTING.md  CARD2_PREVIEW_EXPLANATION.md  Procfile  README.md  anki_tool.py  anki_voc.py  check_anki_models.py  check_card2_preview.py  check_card2_template.py  com.ankivoc.server.json  create_and_sync_template.py  debug_css.py  fix_french_template.py  install_native_host.sh  list_all_decks_notes.py  main.py  pyproject.toml  render.yaml  requirements.txt  server_host.py  sync_all_languages_to_anki.py  sync_templates_to_anki.py  system_prompt.md  test_card2_render.py  verify_all_background_removal.py  verify_all_languages.py  verify_background_removal.py  verify_card2_changes.py  verify_css_improvements.py  verify_final_template.py  verify_models.py
backend/: ANKI_SETUP_GUIDE.md  CARD2_UPDATE_GUIDE.md  EXPLANATION_LANGUAGE_GUIDE.md  FIELD_NAME_FIX.md  cleanup_anki_models.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  regenerate_all_templates.py  requirements.txt  show_card2_templates.py  test_anki_api.sh  test_anki_flow.sh  test_anki_setup.py  test_card2_templates.py  test_explanation_language.py  update_anki_templates.py  update_card2_templates.py  verify_check.py  verify_templates.py
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  web_urls.py
backend/cards/: admin.py  models.py  serializers.py  tests.py  (+3 more)
chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
deployment/: README.md
frontend/: pubspec.yaml
templates/: base.html
(+47 files in other folders)
